@@ -173,6 +173,7 @@ suite = unittest.TestLoader().loadTestsFromNames(
      'tests.test_rfc9323.suite',
      'tests.test_rfc9336.suite',
      'tests.test_rfc9337.suite',
+     'tests.test_rfc9345.suite',
      'tests.test_rfc9385.suite']
 
 )
